[gd_scene load_steps=44 format=3 uid="uid://dbjsyx6vxjupt"]

[ext_resource type="Texture2D" uid="uid://crhjb5udy2fne" path="res://assets/sprites/spritesheets/player/duck.png" id="1_4u703"]
[ext_resource type="Texture2D" uid="uid://d2nd5qddbraik" path="res://assets/sprites/spritesheets/player/fall.png" id="1_e4d23"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_tstak"]
[ext_resource type="Texture2D" uid="uid://b250fjvixbxuo" path="res://assets/sprites/spritesheets/player/hurt.png" id="2_gks7r"]
[ext_resource type="Texture2D" uid="uid://b604yamqjh6va" path="res://assets/sprites/spritesheets/player/idle.png" id="3_a44fk"]
[ext_resource type="Texture2D" uid="uid://bmaalsx1y81ho" path="res://assets/sprites/spritesheets/player/jump.png" id="4_bo04i"]
[ext_resource type="Texture2D" uid="uid://broovq8rprfif" path="res://assets/sprites/spritesheets/player/skip.png" id="5_mrd2h"]
[ext_resource type="AudioStream" uid="uid://cgohyh5iojh0b" path="res://assets/sounds/jump.wav" id="8_jwbom"]
[ext_resource type="AudioStream" uid="uid://dq5h6teotwb7g" path="res://assets/sounds/hurt.wav" id="9_p8o60"]

[sub_resource type="AtlasTexture" id="AtlasTexture_27xsh"]
atlas = ExtResource("1_4u703")
region = Rect2(0, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy4xv"]
atlas = ExtResource("1_4u703")
region = Rect2(37, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftwef"]
atlas = ExtResource("1_4u703")
region = Rect2(74, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lojp6"]
atlas = ExtResource("1_4u703")
region = Rect2(111, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkfi4"]
atlas = ExtResource("1_e4d23")
region = Rect2(0, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_asi2f"]
atlas = ExtResource("1_e4d23")
region = Rect2(37, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ayu"]
atlas = ExtResource("1_e4d23")
region = Rect2(74, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb3g5"]
atlas = ExtResource("1_e4d23")
region = Rect2(111, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1yi"]
atlas = ExtResource("2_gks7r")
region = Rect2(0, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rxei"]
atlas = ExtResource("2_gks7r")
region = Rect2(37, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot5nb"]
atlas = ExtResource("3_a44fk")
region = Rect2(0, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvjn6"]
atlas = ExtResource("3_a44fk")
region = Rect2(37, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kbs2"]
atlas = ExtResource("3_a44fk")
region = Rect2(74, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejaos"]
atlas = ExtResource("3_a44fk")
region = Rect2(111, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyt3a"]
atlas = ExtResource("3_a44fk")
region = Rect2(148, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k7tv"]
atlas = ExtResource("3_a44fk")
region = Rect2(185, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5503"]
atlas = ExtResource("3_a44fk")
region = Rect2(222, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5eja"]
atlas = ExtResource("3_a44fk")
region = Rect2(259, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvb0j"]
atlas = ExtResource("3_a44fk")
region = Rect2(296, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ontx"]
atlas = ExtResource("4_bo04i")
region = Rect2(0, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p18x4"]
atlas = ExtResource("4_bo04i")
region = Rect2(37, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5wvq"]
atlas = ExtResource("4_bo04i")
region = Rect2(74, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iys58"]
atlas = ExtResource("4_bo04i")
region = Rect2(111, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvri6"]
atlas = ExtResource("5_mrd2h")
region = Rect2(0, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t67s3"]
atlas = ExtResource("5_mrd2h")
region = Rect2(37, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyu60"]
atlas = ExtResource("5_mrd2h")
region = Rect2(74, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8qgf"]
atlas = ExtResource("5_mrd2h")
region = Rect2(111, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp1up"]
atlas = ExtResource("5_mrd2h")
region = Rect2(148, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdwyg"]
atlas = ExtResource("5_mrd2h")
region = Rect2(185, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh5yk"]
atlas = ExtResource("5_mrd2h")
region = Rect2(222, 0, 37, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr2kt"]
atlas = ExtResource("5_mrd2h")
region = Rect2(259, 0, 37, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_54eps"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27xsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy4xv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftwef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lojp6")
}],
"loop": true,
"name": &"duck",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkfi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asi2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ayu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb3g5")
}],
"loop": true,
"name": &"fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rxei")
}],
"loop": true,
"name": &"hurt",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot5nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvjn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kbs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejaos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyt3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k7tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5503")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5eja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvb0j")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ontx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p18x4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5wvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iys58")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvri6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t67s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyu60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8qgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp1up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdwyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh5yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr2kt")
}],
"loop": true,
"name": &"skip",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fg31u"]
size = Vector2(18, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rnxsa"]
size = Vector2(21, 23)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 102
script = ExtResource("1_tstak")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_54eps")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_fg31u")

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(0, 10)
target_position = Vector2(10, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(0, 10)
target_position = Vector2(-10, 0)
collision_mask = 4

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_rnxsa")
debug_color = Color(0.890196, 0.294118, 0.368627, 0.419608)

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jwbom")

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_p8o60")

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
